Fixed alignment issues on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+/* globals.css */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
